Added a snow transparency option

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -349,3 +349,5 @@ option.SNOW_NOISE_INTENSITY=Noise Intensity
 option.SNOW_NOISE_INTENSITY.comment=Change how strong the snow noise is.
 option.SNOW_SIZE=Snow Resolution
 option.SNOW_SIZE.comment=Change the resolution or size of the noise.
+option.SNOW_TRANSPARENCY=Snow Transparency
+option.SNOW_TRANSPARENCY.comment=Change the transparency of the snow.
