--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -345,9 +345,15 @@ option.SNOW_NOISE_TYPE=Snow noise
 option.SNOW_NOISE_TYPE.comment=Select between the noise types.
 value.SNOW_NOISE_TYPE.0=Pixelated
 value.SNOW_NOISE_TYPE.1=Non-Pixelated
+
 option.SNOW_NOISE_INTENSITY=Noise Intensity
 option.SNOW_NOISE_INTENSITY.comment=Change how strong the snow noise is.
+
 option.SNOW_SIZE=Snow Resolution
 option.SNOW_SIZE.comment=Change the resolution or size of the noise.
+
 option.SNOW_TRANSPARENCY=Snow Transparency
 option.SNOW_TRANSPARENCY.comment=Change the transparency of the snow.
+
+option.COLOR_DESATURATION=Color Desaturation
+option.COLOR_DESATURATION.commnet=Desaturates the colors of the environment.
